--- a/gateway/package.json
+++ b/gateway/package.json
@@ -11,11 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.2",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "redis": "^4.6.15",
     "ws": "^8.18.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.11",
     "@types/ws": "^8.5.11",
